--- a/README
+++ b/README
@@ -1,3 +1,4 @@
-TODO: Upload all the files.
+Complete source and project files for FS Particle Studio by $NulL.
 
-(PS: Someone poke me if I forget!)
+Project files are for visual studio 2008.
+
